# make-us-rich

./: .env  .gitignore  404.html  Dockerfile  LICENSE.txt  README.md  example.csv  index.html  kedro_config.toml  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: ci.yml
api/: Dockerfile  main.py  requirements.txt
api/cli/: index.html
api/client/: index.html
api/interface/: index.html
api/pipelines/converting/: index.html
api/pipelines/exporting/: index.html
api/pipelines/fetching/: index.html
api/pipelines/preprocessing/: index.html
api/serving/: index.html
api/utils/: index.html
api/worker/: index.html
conf/base/: .env-api  .env-binance  .env-minio  .env-pgadmin  .env-postgres  .env-serving  catalog.yml  parameters.yml
docs/: api.md  index.md  interface.md  serving.md  training.md
docs/_templates/autosummary/: class.rst
docs/api/: cli.md  client.md  interface.md  pipelines.md  serving.md  utils.md  worker.md
docs/api/pipelines/: converting.md  exporting.md  fetching.md  preprocessing.md  training.md
docs/source/: conf.py  index.rst
docs/source/intro/: intro.mdx
interface/: Dockerfile  README.md  app.py  docker-compose.yml  index.html  requirements.txt
interface/database/: init.sql
make_us_rich/: __init__.py  __main__.py  pipeline_registry.py
make_us_rich/cli/: __init__.py  main.py  run_flavors.py  runner.py  runs_flavor.py  utils.py
make_us_rich/client/: __init__.py  binance_client.py  minio_client.py
make_us_rich/interface/: Dockerfile  __init__.py  api_request.py  authentication.py  database_handler.py  plots.py
make_us_rich/pipelines/converting/: nodes.py  pipeline.py
make_us_rich/pipelines/converting_to_onnx/: __init__.py  nodes.py
make_us_rich/pipelines/exporting/: __init__.py  nodes.py  pipeline.py
make_us_rich/pipelines/exporting_files/: __init__.py
make_us_rich/serving/: model.py  model_loader.py
make_us_rich/trainer/: README.md  pyproject.toml
make_us_rich/utils/: __init__.py  binance_client.py  directory_cleaning.py  load_env.py
make_us_rich/worker/: README.md  __init__.py  kedro_task.py  prefect_flow.py  project_metadata.py  trainer_flow.py
notebooks/: api_calls.ipynb  dataloading.ipynb  exporting.ipynb  onnxinference.ipynb  preprocessing_lstm.ipynb
notebooks/checkpoints/: epoch=2-step=218.ckpt
notebooks/dev/: README.md  api_inference_onnx.ipynb  inference.ipynb  preprocessing_lstm.ipynb
search/: search_index.json
serving/: index.html
src/: requirements.in  requirements.txt  setup.py
src/interface/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
src/make_me_rich/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/make_us_rich/: __init__.py  __main__.py  binance_client.py
src/serving/: .gitignore  Dockerfile  README.md  app.py  model.py  model_loader.py  requirements.txt
src/tests/: test_run.py
src/trainer/: .gitignore  Dockerfile  register_prefect_flow.py  training_pipeline.json
src/viz/: README.md
src/worker/: README.md  prefect_flow.py  requirements.txt
tests/: test_make_us_rich.py
trainer/: README.md
training/: index.html  run_training.py  trainer_flow.py
worker/: README.md
worker/src/: Dockerfile
(+85 files in other folders)
