[tool.poetry]
name = "make-us-rich"
version = "0.1.0"
description = "Cryptocurrency forecasting 📈 training and serving models made automatic"
authors = ["Thomas Chaigneau <t.chaigneau.tc@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
make-us-rich = "make_us_rich.cli.main:app"

[tool.poetry.dependencies]
python = "3.8"
ipython = "~=7.10"
isort = "~=5.0"
jupyter = "~=1.0"
jupyter-client = ">=5.1"
jupyterlab = "~=3.0"
kedro = {version = "0.17.6", extras = ["pandas.CSVDataSet"]}
kedro-viz = "3.16.0"
minio = "7.1.2"
onnx = "1.10.2"
nbstripout = "~=0.4"
onnxruntime = "v1.10.0"
prefect = "0.15.13"
python-binance = "v1.0.15"
pytorch-lightning = "1.5.9"
scikit-learn = "1.0.2"
wandb = "0.12.9"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.10.1%2Bcu113-cp38-cp38-linux_x86_64.whl"}
python-dotenv = "^0.19.2"
typer = {extras = ["all"], version = "^0.4.0"}
pandas = "^1.4.0"
streamlit = "1.4.0"
extra-streamlit-components = "^0.1.53"
psycopg2-binary = "^2.9.3"
PyJWT = "^2.3.0"
plotly = "^5.6.0"

[tool.poetry.dev-dependencies]
pytest = "~=6.2"
black = "21.5b1"
flake8 = ">=3.7.9"
pytest-cov = "~=3.0"
pytest-mock = ">=1.7.1"
wheel = ">=0.35"

[tool.kedro]
package_name = "make_us_rich"
project_name = "make-us-rich"
project_version = "0.17.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
