[tool.poetry]
name = "make-us-rich"
version = "0.1.0.dev2"
description = "Cryptocurrency forecasting 📈 training and serving models made automatic"
authors = ["Thomas Chaigneau <t.chaigneau.tc@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
mkrich = "make_us_rich.cli.main:app"

[tool.poetry.dependencies]
docker = "^5.0.3"
GitPython = "^3.1.26"
ipython = "~=7.10"
isort = "~=5.0"
jupyter = "~=1.0"
jupyter-client = ">=5.1"
jupyterlab = "~=3.0"
kedro = {version = "0.17.6", extras = ["pandas.CSVDataSet"]}
kedro-viz = "3.16.0"
minio = "7.1.2"
onnx = "1.10.2"
onnxruntime = "v1.10.0"
pandas = "^1.4.0"
prefect = "0.15.13"
python = "3.8"
python-binance = "v0.7.10"
python-dotenv = "^0.19.2"
pytorch-lightning = "1.5.9"
scikit-learn = "1.0.2"
torch = "1.10.0"
typer = {extras = ["all"], version = "^0.4.0"}
wandb = "0.12.9"

[tool.poetry.dev-dependencies]
pytest = "~=6.2"
black = "21.5b1"
flake8 = ">=3.7.9"
pytest-cov = "~=3.0"
pytest-mock = ">=1.7.1"
wheel = ">=0.35"
recommonmark = "^0.7.1"
Sphinx = "^4.4.0"
sphinx-autodoc-typehints = "^1.17.0"
nbsphinx = "^0.8.8"
sphinx-copybutton = "^0.5.0"
sphinx-rtd-theme = "^1.0.0"

[tool.kedro]
package_name = "make_us_rich"
project_name = "make-us-rich"
project_version = "0.17.6"
source_dir = "make_us_rich"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
